--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "my-nav",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tushar-craft.github.io/my-nav",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
