--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "my-nav",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://tushar-craft.github.io/my-nav",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
+    "build": "next build",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d out",
-    "type": "module"
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
-  }
+    "gh-pages": "^6.0.0"
+  },
+  "homepage": "https://tushar-craft.github.io/my-nav"
 }
