--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "my-nav",
-  "version": "1.0.0",
+  "name": "temp",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d out"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
-  },
-  "homepage": "https://tushar-craft.github.io/my-nav"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.3.3"
+  }
 }
